--- a/NetCDF/README
+++ b/NetCDF/README
@@ -1,3 +1,3 @@
 NetCDF files created for the study.
 
-Please note that Variable "SFC" represents the year starting from 1979. The maps represents the onset spatial distribution of the flash drought.
+Please note that Variable "SFC" represents the year starting from 1979 for SMVI, SESR, HWD and PDD and Starting from 2000 for USDM and QD. The maps represents the onset spatial distribution of the flash drought.
